--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<h1> Zhihui Wang's website </h1>
+<!DOCTYPE html>
+
+<html>
+
+<head>
+
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
+<title>Zhihui Wang's website
+</title>
+</head>
+<body>
+
+<h1>Zhihui Wang</h1>
+<h2> PhD Student in Economics</h2>
+<h3> Columbia University GSAS</h3>
+
+<img 
+    src = "id2.jpg"
+    alt="photo_id"
+    width = "260"
+    height = "260" />
+<hr>
+
+<p>
+    <u> <b> Contact</b></u>:
+    <br> Email: <a href="mailto: zw2957@columbia.edu"> <u> zw2957@columbia.edu </u></a>
+</p>
+
+<hr>
+
+<p>
+    <u> <b> Research Interests</b></u>:
+    <br> Public Economics, Theory, Development
+
+</p>
+
+
+</body>
+</html>
