--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h3> Columbia University GSAS</h3>
 
 <img 
-    src = "id2.jpg"
+    src = "id_zhihui.PNG"
     alt="photo_id"
     width = "260"
     height = "260" />
@@ -31,7 +31,7 @@
 
 <p>
     <u> <b> Research Interests</b></u>:
-    <br> Public Economics, Theory, Development
+    <br> Theory, Public Economics, Development
 
 </p>
 
