--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 
 </p>
 
+<p>
+    <u> <b> Research Projects </b></u>
+    "An Equivalence Between Information Discrimination and Price Discrimination", with Delong Meng
+</p>
+
 
 </body>
 </html>
