--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
 <h1>Zhihui Wang</h1>
+<h4> (Pronounce "Dje-Hue")</h4>
 <h2> PhD Student in Economics</h2>
 <h3> Columbia University GSAS</h3>
 
