--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p>
     <u> <b> Research Interests</b></u>:
-    <br> Theory, Public Economics, Development
+    <br> Theory, Networks, Public Economics, Development
 
 </p>
 
