update photo source

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@ p {
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Tim Roughgarden's Homepage</title>
+<title>Zhihui Wang's Homepage</title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link type="text/css" rel="stylesheet" id="dark-mode-custom-link"><link type="text/css" rel="stylesheet" id="dark-mode-general-link"><style lang="en" type="text/css" id="dark-mode-custom-style"></style><style lang="en" type="text/css" id="dark-mode-native-style"></style><style lang="en" type="text/css" id="dark-mode-native-sheet"></style></head>
 <body>
 
 <table cellpadding="10">
 <tbody><tr><td>
-<img src="photos/headshot1.jpg" alt="photo" width="315" height="420"><br>
+<img src="id_zhihui.PNG" alt="photo" width="315" height="420"><br>
 </td>
 
 <td>
