--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@ p {
 <body>
 
 <table cellpadding="10">
-<tbody><tr><td>
-<img src="id_zhihui.PNG" alt="photo"><br>
-</td>
+<tbody>
+    <tr>
+        <td>
+            <img src="id_zhihui.PNG" alt="photo" width="150"><br>
+        </td>
 
-<td>
+        <td>
 <h2> Zhihui Wang </h2>
 
 <p>
