--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ p {
 <tbody>
     <tr>
         <td>
-            <img src="id_zhihui.PNG" alt="photo" width="100"><br>
+            <img src="id2.PNG" alt="photo" width="180"><br>
         </td>
 
         <td>
