--- a/index.html
+++ b/index.html
@@ -23,19 +23,15 @@ p {
         <td>
             <img src="id2.PNG" alt="photo" width="180"><br>
         </td>
-
         <td>
-<h2> Zhihui Wang </h2>
+<p> Zhihui Wang </p>
 
 <p>
 Third year PhD student in Economics at Columbia University.</p>  
 
-    
-<b>Research interests</b>: Information Economics, Economics of Networks, Public Economics. <br>
+<p>Research interests: Information Economics, Economics of Networks, Public Economics. <\p>
 
-<p>
-Email: zw2957@columbia.edu<br>
-</p>
+<p> Email: zw2957@columbia.edu<br> </p>
 </td></tr></tbody></table>
 
 
