--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@ p {
         <td>
 <p> Zhihui Wang </p>
 
-<p>
-Third year PhD student in Economics at Columbia University.</p>  
+<p> Third year PhD student in Economics at Columbia University.</p>  
 
-<p>Research interests: Information Economics, Economics of Networks, Public Economics. <\p>
+<p> Research interests: Information Economics, Economics of Networks, Public Economics. <\p>
 
 <p> Email: zw2957@columbia.edu<br> </p>
 </td></tr></tbody></table>
 
 
 
+<ul>
+  <li><a href="research.html">Research</a></li>
+  <li><a href="teaching.html">Teaching</a></li>
+</ul>
 
-<li> 
-</li>
-<li><a href="https://www.algorithmsilluminated.org/"><i>CV</i></a>
 
 
 
