--- a/index.html
+++ b/index.html
@@ -28,16 +28,32 @@ p {
 
 <p> Third year PhD student in Economics at Columbia University.</p>  
 
-<p> Research interests: Information Economics, Economics of Networks, Public Economics. <\p>
+<p> Research interests: Information Economics, Economics of Networks, Public Economics. </p>
 
 <p> Email: zw2957@columbia.edu<br> </p>
 </td></tr></tbody></table>
 
 
 
+<h2>Research</h2>
 <ul>
-  <li><a href="research.html">Research</a></li>
-  <li><a href="teaching.html">Teaching</a></li>
+    <li>
+        <b>“Altruism and Network Formation”</b> (2025).  
+        Working paper.
+        <br>
+        <a href="altruism_network.pdf">[PDF]</a> |
+        <a href="slides_altruism.pdf">[Slides]</a>
+    </li>
+    <li>
+        <b>“Hierarchical Hold-Up: Central vs Local Enforcement”</b> (2025).  
+    </li>
+</ul>
+
+<h2>Teaching</h2>
+<ul>
+    <li><b>Game Theory</b> (Teaching Assistant for Evan Sadler, Fall 2025)</li>
+    <li><b>Intermediate Microeconomics</b> (Teaching Assistant for Anna Caterina Musati, Spring 2024)</li>
+    <li><b>Game Theory</b> (Teaching Assistant for Murat Yilmaz, Fall 2024)</li> 
 </ul>
 
 
