--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@ p {
 <h2>Research</h2>
 <ul>
     <li>
-        <b>“Altruism and Network Formation”</b> (2025).  
+        <b>"Information Discrimination Through Market Segmentation" </b> (with Delong Meng)
+    </li>
+    <li>
+        <b>"An Equivalence Between Information Discrimination and Price Discrimination" </b> (with Delong Meng)
+    </li>
+    <li><b>“Altruism and Network Formation”</b> .  
         Working paper.
         <br>
         <a href="altruism_network.pdf">[PDF]</a> |
