--- a/index.html
+++ b/index.html
@@ -39,12 +39,17 @@ p {
 <ul>
     <li>
         <b>"Information Discrimination Through Market Segmentation" </b> (with Delong Meng)
+        <br>
+        <a href="information_discrimination.pdf">[PDF]</a> |
+        <a href="slides_information.pdf">[Slides]</a>
     </li>
     <li>
         <b>"An Equivalence Between Information Discrimination and Price Discrimination" </b> (with Delong Meng)
+        <br>
+        <a href="equivalence.pdf">[PDF]</a> |
+        <a href="slides_equivalence.pdf">[Slides]</a>
     </li>
     <li><b>“Altruism and Network Formation”</b> .  
-        Working paper.
         <br>
         <a href="altruism_network.pdf">[PDF]</a> |
         <a href="slides_altruism.pdf">[Slides]</a>
