--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<html><head><style type="text/css">
-
-body {
-    font-family: Helvetica, Geneva, Arial,
-          SunSans-Regular, sans-serif }
-
-p {
-  font-size: 18px;
-}
-
+<html><head>
+    <style>
+  body {
+    font-family: "Courier New", Courier, monospace;
+    font-size: 14px;
+    color: #000; /* black */
+    white-space: pre; /* keeps spacing */
+    line-height: 1.4;
+  }
 </style>
 
 
