--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<html><head>
-    <style>
-  body {
-    font-family: "Courier New", Courier, monospace;
-    font-size: 14px;
-    color: #000; /* black */
-    white-space: pre; /* keeps spacing */
-    line-height: 1.4;
-  }
-</style>
+
+<html><head><style type="text/css">
+
+body {
+    font-family: "Courier New", Courier, monospace}
+
+p {
+  font-size: 16px;
+}
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
